After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751932 - GstVideoDecoder: Fix setting default pixel-aspect-ratio
GstVideoDecoder: Fix setting default pixel-aspect-ratio
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.5.2
Other Windows
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-03 21:30 UTC by Stian Selnes (stianse)
Modified: 2015-08-16 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch with fix (1.55 KB, patch)
2015-07-03 21:30 UTC, Stian Selnes (stianse)
committed Details | Review

Description Stian Selnes (stianse) 2015-07-03 21:30:49 UTC
Created attachment 306781 [details] [review]
Patch with fix

The attached patch fixes an issue where the decoder may try to fixate a field that does not exist.

See bug https://bugzilla.gnome.org/show_bug.cgi?id=747190 for reference about default caps.
Comment 1 Sebastian Dröge (slomo) 2015-07-06 09:00:05 UTC
commit 008a2288652fdf25baa5af993b4ac76b0634a7ad
Author: Stian Selnes <stian@pexip.com>
Date:   Wed Jul 1 17:09:35 2015 +0200

    videodecoder: Fix setting default pixel-aspect-ratio
    
    It's needed to check if pixel-aspect-ratio exists before fixating.
    It does not exist if input caps is not set yet and allowed caps
    does not contain pixel-aspect-ratio (e.g. when using GST_VIDEO_CAPS_MAKE)
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751932